# Data-Science

./: HW_1.ipynb
HW_10/: HW_10_1.ipynb  HW_10_2.ipynb
HW_11/: HW_11.ipynb
HW_12/: HW_12.ipynb
HW_2/: Hw2.1.ipynb  Hw2.2.ipynb  Hw2.3.ipynb  min_max_avg_salary.csv
HW_3/: HW_3.ipynb
HW_4/: HW_4.ipynb  pyproject.toml
HW_5/: pyproject.toml
HW_6/: HW_6.ipynb
HW_7/: HW_7.ipynb
HW_8/: GoIT_HW_8_new.ipynb  pyproject.toml
HW_9/: HW_9.ipynb  pyproject.toml
