[tool.poetry]
name = "hw-5"
version = "0.1.0"
description = ""
authors = ["OlhaVerbova <137227019+OlhaVerbova@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
